# mastiff

./: .gitignore  LICENSE  README.md  mastiff.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mastiff/_internal/: git.py  subprocess.py
src/mastiff/analysis/: categories.py  cli_providers.py  client.py  errors.py  prompt.py  provider_factory.py  response.py
src/mastiff/cli/: app.py  output.py
src/mastiff/cli/commands/: baseline.py  init.py  install.py  review.py  server.py  setup.py  watch.py
src/mastiff/config/: defaults.py  loader.py  schema.py
src/mastiff/context/: __init__.py  cache.py  resolver.py  tracer.py
src/mastiff/context/languages/: __init__.py  base.py  generic.py  python.py  typescript.py
src/mastiff/core/: engine.py  fingerprint.py  models.py  pipeline.py  provider.py  severity.py
src/mastiff/diff/: collector.py  filter.py  parser.py
src/mastiff/integrations/: claude_code.py  codex.py  precommit.py
src/mastiff/integrations/lsp/: debounce.py  diagnostics.py  scheduler.py  server.py
src/mastiff/observability/: logger.py  metrics.py
src/mastiff/security/: redactor.py
src/sentinel/_internal/: git.py
src/sentinel/config/: defaults.py  loader.py  schema.py
src/sentinel/core/: fingerprint.py  models.py  pipeline.py  provider.py  severity.py
src/sentinel/security/: patterns.py  redactor.py  sanitizer.py
tests/: conftest.py
tests/unit/: __init__.py  test_agent_integration.py  test_analysis.py  test_cli.py  test_cli_providers.py  test_config.py  test_context.py  test_diff.py  test_engine.py  test_fingerprint.py  test_integrations.py  test_internal.py  test_models.py  test_observability.py  test_pipeline.py  test_provider.py  test_provider_factory.py  test_security.py  test_severity.py  test_watch.py
tests/unit/languages/: __init__.py  test_python_parser.py  test_typescript_parser.py
