[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mastiff"
version = "0.1.0"
description = "AI code review agent that detects dangerous patterns in LLM-generated code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mastiff Contributors"}]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/yuuichieguchi/mastiff"
Repository = "https://github.com/yuuichieguchi/mastiff"
Issues = "https://github.com/yuuichieguchi/mastiff/issues"

dependencies = [
    "anthropic>=0.42,<1.0",
    "click>=8.1,<9.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<14.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
]
lsp = ["pygls>=2.0,<3.0", "lsprotocol>=2024.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
mastiff = "mastiff.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mastiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
